--- a/quiz-application/src/html/index.html
+++ b/quiz-application/src/html/index.html
@@ -13,7 +13,7 @@
     <main>
         <section id="quiz-selection">
             <h2>Select Quiz Category and Difficulty</h2>
-            <form id="quiz-form">
+            <form id="quiz-form" action="quiz.html" method="get">
                 <label for="category">Category:</label>
                 <select id="category" name="category">
                     <option value="general">General Knowledge</option>
@@ -30,6 +30,5 @@
             </form>
         </section>
     </main>
-    <script src="../js/main.js"></script>
 </body>
 </html>
