--- a/quiz-application/src/html/quiz.html
+++ b/quiz-application/src/html/quiz.html
@@ -11,13 +11,12 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>Quiz Title</h1>
+        <h1>Quiz</h1>
         <div id="timer" class="timer">Time Left: <span id="time">60</span> seconds</div>
         <form id="quiz-form">
             <div id="questions-container"></div>
             <button type="submit">Submit Quiz</button>
         </form>
     </div>
-    <script src="../js/main.js" defer></script>
 </body>
 </html>
