--- a/quiz-application/src/html/quiz.html
+++ b/quiz-application/src/html/quiz.html
@@ -3,20 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Application</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="../css/quiz.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/timer.js" defer></script>
     <script src="../js/quiz.js" defer></script>
 </head>
+
 <body>
     <div class="quiz-container">
+
         <h1>Quiz</h1>
-        <div id="timer" class="timer">Time Left: <span id="time">60</span> seconds</div>
+
+        <div id="timer">Time Left: <span id="time">60</span></div>
+
         <form id="quiz-form">
             <div id="questions-container"></div>
-            <button type="submit">Submit Quiz</button>
+
+            <button id="submit-btn" type="submit">Submit Quiz</button>
         </form>
+
     </div>
 </body>
 </html>
